Mon Sep  7 00:34:19 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/DocumentRef.h: Added DocState for documents marked as
	"noindex".

	* htdig/HTML.cc, htdig/Retriever.h, htdig/Retriever.cc,
	htmerge/docs.cc: Use it to remove them.

Sun Sep  6 21:36:16 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/defaults.cc: Sorted the current list of defaults, added
	"pdf_parser" for the program to use in PDF.cc.

	* htdig/PDF.cc: Use it, checking for the file before calling
	system to fail gracefully.

	* htlib/URL.cc: Bug fix for http:/ v. http://

Sat Sep  5 23:11:48 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htlib/String.cc: Added patch by Zvi Har'El
	<rl@math.technion.ac.il> to indexOf function to prevent "false
	positive" matches.

	* installdir/nomatch.html, installdir/syntax.html: Fixed reference
	to ht://Dig 3.0.

	* htdig/Document.cc: Use robotstxt_name as user-agent as a more
	consistent approach.

	* htsearch/parser.cc: Convert "%01" to "|" to support <SELECT
	... MULTIPLE> tags.

Thu Sep  3 20:53:51 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/Makefile.in: Remove reference to -lgdbm

	* htsearch/Display.cc: Send Content-type header after all variable
	expansion is completed.

	* htcommon/WordList.cc: Removed warning under egcs-1.1

Tue Aug 11 08:58:34 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

        * htsearch/Display.cc, htdig/Retriever.h,
	htdig/Retriever.cc, htdig/Parsable.h, htdig/Parsable.cc,
	htdig/HTML.h, htdig/HTML.cc, htcommon/defaults.cc,
	htcommon/DocumentRef.h, htcommon/DocumentRef.cc,
	htcommon/DocumentDB.cc:
	Second patch for META description tags. New field in DocDB for the
        desc., space in word DB w/ proper factor.

	* htmerge/docs.cc: Added statistic for total size of docs in DB.
	
Thu Aug  6 10:15:22 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Retriever.cc: Added "local_dir_doc" config option,
	the default filename in a directory.
